--- a/view/frontend/templates/shipping.phtml
+++ b/view/frontend/templates/shipping.phtml
@@ -81,7 +81,7 @@
                     </div>
                 </template>
             </div>
-            <form x-show="guest" class="form form-shipping-address"
+            <form x-show="guest || config.customerData.addresses.length === 0" class="form form-shipping-address"
             id="guest-shipping-form" data-hasrequired="* Required Fields">
                 <div id="shipping-new-address-form" class="fieldset address grid grid-cols-2 gap-5">
                     <template x-for="(address, index) in addressFormFields" :key="index">
@@ -155,6 +155,7 @@
                                             </template>
                                         </select>
                                     </div>
+                                    <div class="field-error text-base text-error mt-2" x-show="errors[index]" x-text="errors[index]"></div>
                                 </div>
                             </template>
                             <template x-if="isRegionAvailable && index == 'region_id'">
@@ -183,6 +184,7 @@
                                             </template>
                                         </select>
                                     </div>
+                                    <div class="field-error text-base text-error mt-2" x-show="errors[index]" x-text="errors[index]"></div>
                                 </div>
                             </template>
                             <template x-if="!isRegionAvailable && index == 'region'">
@@ -203,6 +205,7 @@
                                         x-bind:name="index"
                                         x-bind:data-validate="JSON.stringify(address.validation)">
                                     </div>
+                                    <div class="field-error text-base text-error mt-2" x-show="errors[index]" x-text="errors[index]"></div>
                                 </div>
                             </template>
                         </div>
@@ -399,6 +402,7 @@
                                                     </template>
                                                 </select>
                                             </div>
+                                            <div class="field-error text-base text-error mt-2" x-show="errors[index]" x-text="errors[index]"></div>
                                         </div>
                                     </template>
                                     <template x-if="isRegionAvailable && index == 'region_id'">
@@ -428,6 +432,7 @@
                                                     </template>
                                                 </select>
                                             </div>
+                                            <div class="field-error text-base text-error mt-2" x-show="errors[index]" x-text="errors[index]"></div>
                                         </div>
                                     </template>
                                     <template x-if="!isRegionAvailable && index == 'region'">
@@ -448,6 +453,7 @@
                                                 x-bind:name="index"
                                                 x-bind:data-validate="JSON.stringify(address.validation)">
                                             </div>
+                                            <div class="field-error text-base text-error mt-2" x-show="errors[index]" x-text="errors[index]"></div>
                                         </div>
                                     </template>
                                 </div>
@@ -464,7 +470,6 @@
                         </form>
                     </div>
                 </div>
-
                 <div class="modal-footer mt-10 flex justify-end items-center gap-5">
                     <button class="action primary action-save-address primary-btn"
                     @click.prevent="triggerFormSubmit('co-shipping-form')"
