--- a/view/frontend/templates/payment.phtml
+++ b/view/frontend/templates/payment.phtml
@@ -143,7 +143,7 @@ if ($paypalSmartButton->getJsInitParams()) {
                                                                                                         x-bind:id="index"
                                                                                                         x-bind:name="index"
                                                                                                         x-on:input.debounce="onChangeValidateForm($event)"
-                                                                                                        x-bind:value="selectedBillingAddressId != 0 && defBillAdr ? defBillAdr[index] : ''"
+                                                                                                        x-bind:value="(selectedBillingAddressId != 0 || config.customerData.addresses.length == 0) && defBillAdr ? defBillAdr[index] : ''"
                                                                                                         x-bind:data-validate="JSON.stringify(address.validation)">
                                                                                                     </div>
                                                                                                     <div class="field-error text-base text-error mt-2" x-show="errors[index]" x-text="errors[index]"></div>
@@ -166,7 +166,7 @@ if ($paypalSmartButton->getJsInitParams()) {
                                                                                                                 class="input-text w-full block rounded-md border-0 py-2.5 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-primary sm:text-sm sm:leading-6"
                                                                                                                 x-on:input.debounce="onChangeValidateForm($event)"
                                                                                                                 type="text"
-                                                                                                                x-bind:value="selectedBillingAddressId != 0 && defBillAdr ? defBillAdr[index][indx] : ''"
+                                                                                                                x-bind:value="(selectedBillingAddressId != 0 || config.customerData.addresses.length == 0) && defBillAdr ? defBillAdr[index][indx] : ''"
                                                                                                                 x-bind:name="index + '[' + indx + ']'"
                                                                                                                 x-bind:data-validate="(indx == '0') ? JSON.stringify(address.validation) : []">
                                                                                                                 <div class="field-error text-base text-error mt-2" x-show="errors[index + '[' + indx + ']']" x-text="errors[index + '[' + indx + ']']"></div>
@@ -228,7 +228,7 @@ if ($paypalSmartButton->getJsInitParams()) {
                                                                                                             </option>
                                                                                                             <template x-for="(option, index) in regionArray">
                                                                                                                 <option :value="index"
-                                                                                                                x-bind:selected = "selectedBillingAddressId != 0 && defBillAdr ? defBillAdr['region_id'] === index : ''"
+                                                                                                                x-bind:selected = "(selectedBillingAddressId != 0 || config.customerData.addresses.length == 0) && defBillAdr ? defBillAdr['region_id'] === index : ''"
                                                                                                                 x-text="option"></option>
                                                                                                             </template>
                                                                                                         </select>
@@ -251,7 +251,7 @@ if ($paypalSmartButton->getJsInitParams()) {
                                                                                                         class="input-text region-select-input input-text w-full block rounded-md border-0 py-2.5 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-primary sm:text-sm sm:leading-6"
                                                                                                         x-on:input.debounce="onChangeValidateForm($event)"
                                                                                                         x-bind:type="address.dataType"
-                                                                                                        x-bind:value="selectedBillingAddressId != 0 && defBillAdr ? defBillAdr[index] : ''"
+                                                                                                        x-bind:value="(selectedBillingAddressId != 0 || config.customerData.addresses.length == 0) && defBillAdr ? defBillAdr[index] : ''"
                                                                                                         x-bind:id="index"
                                                                                                         x-bind:name="index"
                                                                                                         x-bind:data-validate="JSON.stringify(address.validation)">
@@ -263,7 +263,7 @@ if ($paypalSmartButton->getJsInitParams()) {
                                                                                     </template>
                                                                                     <div class="field choice mb-5 col-span-2" x-show="!guest">
                                                                                         <input type="checkbox" class="checkbox rounded h-4 w-4 cursor-pointer border-gray-300 text-primary focus:ring-primary"
-                                                                                        x-bind:checked="selectedBillingAddressId != 0 && defBillAdr ? defBillAdr['save_in_address_book'] : false"
+                                                                                        x-bind:checked="(selectedBillingAddressId != 0 || config.customerData.addresses.length == 0) && defBillAdr ? defBillAdr['save_in_address_book'] : false"
                                                                                         x-bind:id="`billsave-in-adr-${payment_method.code}`" />
                                                                                         <label class="label inline-block ml-2 cursor-pointer leading-6 text-gray-900"
                                                                                         x-bind:for="`billsave-in-adr-${payment_method.code}`">
