--- a/view/frontend/templates/page/checkout_head.phtml
+++ b/view/frontend/templates/page/checkout_head.phtml
@@ -34,7 +34,7 @@ $stylesheets = [
     <?= /* @noEscape */ $secureRenderer->renderTag(
         'link',
         [
-            'rel' => 'stylesheet',
+            'rel' => 'stylesheet preload',
             'type' => 'text/css',
             'media' => 'all',
             'as' => 'style',
